Fix carousel jumpiness at bottom.

--- a/css/strip.css
+++ b/css/strip.css
@@ -214,6 +214,7 @@ h4 {
 }
 
 #myCarousel .item {
+    height: 540px;
 }
 
 a.carousel-control {
